# Unlearning-Bidirectual-Architecture

./: .gitignore  README.md  pyproject.toml
data/reversal_v1/: eval_logic.jsonl  eval_memory.jsonl  metadata.json  train_facts.jsonl
scripts/: make_reversal_v1_dataset.py  parallel_gen_probe.py  phase25_llada_causal_probe.py  phase3_path_viz.py  relational_bidir_probe.py  reversal_memorization_probe.py  reverse_probe.py  scaling_viz.py  summary_viz.py  verify_adapt.py  wandb_curves_viz.py
src/unlearning_architecture/: adapt.py  data.py  eval.py  native_dlm.py  unlearn.py
