[project]
name = "unlearning-architecture"
version = "0.1.0"
description = "Behavior-mode unlearning between AR and DLM under fixed architecture."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "bitsandbytes>=0.49.2",
    "datasets>=4.8.4",
    "matplotlib>=3.10.9",
    "peft>=0.19.1",
    "transformers>=5.6.2",
    "wandb>=0.26.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/unlearning_architecture"]
